# genworlds-community

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yaml  docker-compose.yml  package.json
deployments/: README.md  build-all.py
deployments/docker/: Dockerfile  runner.py
deployments/replit/: .replit  pyproject.toml  replit.nix
deployments/shared-scripts/: build-all.py  runner.py
deployments/single-container/: Dockerfile  README.md
docker/: 16bit-back.Dockerfile  16bit-front.Dockerfile  Dockerfile  mocked-ws.Dockerfile  nano-vue.Dockerfile  real-ws.Dockerfile  world-instance.Dockerfile
use_cases/quickstart/: quickstart.ipynb  screens_config.json
use_cases/roundtable/: event_stream_config.json  mocked_record.json  world_definition.yaml  world_setup.py
use_cases/roundtable/brains/: event_filler_brain.py  navigation_brain.py  podcast_brain.py
use_cases/roundtable/world_definitions/: agents_of_change.yaml  agents_of_change.yaml.mocked_record.json  ai_safety.yaml  ai_safety_and_ethics.yaml  ai_safety_and_ethics.yaml.mocked_record.json  aliens.yaml  aliens.yaml.mocked_record.json  all_in_podcast.yaml  all_in_podcast.yaml.mocked_record.json  business_luminaries.yaml  business_luminaries.yaml.mocked_record.json  chef_s_table.yaml  chef_s_table.yaml.mocked_record.json  comedic_genius.yaml  comedic_genius.yaml.mocked_record.json  comedy_goats.yaml  comedy_goats.yaml.mocked_record.json  comp_sci_giga_brains.yaml  comp_sci_goats.yaml  (+45 more)
vue-gui/: package.json  tailwind.config.js  vue.config.js
vue-gui/src/: main.js  router.js  tailwind.css
(+23 files in other folders)
